package de.dhbw.karlsruhe.getraenkeabrechnung.logging.logwriter;

public interface LogWriter {
    void write(String message);
}
